--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.18.40",
+    "@types/react": "^18.2.20",
+    "@types/react-dom": "^18.2.7",
+    "@types/react-redux": "^7.1.25",
     "formik": "^2.2.9",
     "nanoid": "^4.0.1",
     "prop-types": "^15.8.1",
@@ -17,6 +22,7 @@
     "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
     "redux-persist": "^6.0.0",
+    "typescript": "^4.9.5",
     "web-vitals": "^2.1.3",
     "yup": "^1.0.2",
     "yup-phone": "^1.3.2"
